# codegen-support-docs

./: LICENSE  clojure-doc-lore.md
simple-webserver/: Cargo.toml  KG-usage.md  README.md  app-README.md  code-lore.ttl  dependencies.ttl  derived-rust-kg.ttl  doc-lore.ttl  kg.ttl  omissions.md  prd-simple-webserver-b.md  prd-simple-webserver-sec.md  prd-simple-webserver.md  project.clj  prompt.md  rdv-rust-app-prompt.md  readme.md  role-setup-prompt-6.md  rust-server.rs  stylesheet.ttl
simple-webserver/resources/public/css/: style.css
simple-webserver/src/simple_webserver/: core.clj
